--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="hero">
           <h3>Hello,</h3>
           <p>I'm Bernadeth Bañaga</p>
-          <h3>"I never dream for success, <br> work for it."</h3>
+          <h3>"I never dream for success, <br> I work for it."</h3>
           <button>
             <span>Hire me</span>
           </button>
